examples/test/testpolicy16826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16826
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key46: value45
      key34: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value15
          key48: value27
      podSelector:
        matchLabels:
          key16: value45
